--- a/.cvimrc
+++ b/.cvimrc
@@ -36,6 +36,7 @@ let searchengine edilex_ed = ["https://www-edilex-fi.libproxy.helsinki.fi/", "ht
 let searchengine helkabooks_hb = ["https://helka.finna.fi/", "http://helkab/%s"]
 let searchengine helkaarticles_ha = ["https://helka.finna.fi/Primo/Home", "http://helkaa/%s"]
 let searchengine asiakastietobusiness_ab = ["https://www.asiakastieto.fi/yritykset/", "https://www.asiakastieto.fi/yritykset/haku?type=BUSINESS&q=%s"]
+let searchengine spotify_sp = ["https://open.spotify.com/search/", "https://open.spotify.com/search/%s"]
 
 
 let searchalias g = "google" " Create a shortcut for search engines.
@@ -49,6 +50,7 @@ let searchalias ed = "edilex_ed"
 let searchalias hb = "helkabooks_hb"
 let searchalias ha = "helkaarticles_ha"
 let searchalias ab = "asiakastietobusiness_ab"
+let searchalias sp = "spotify_sp"
 
 " alias ':g' to ':tabnew google'
 command g tabnew google
