--- a/.cvimrc
+++ b/.cvimrc
@@ -38,6 +38,8 @@ let searchengine helkaarticles_ha = ["https://helka.finna.fi/Primo/Home", "http:
 let searchengine asiakastietobusiness_ab = ["https://www.asiakastieto.fi/yritykset/", "https://www.asiakastieto.fi/yritykset/haku?type=BUSINESS&q=%s"]
 let searchengine spotify_sp = ["https://open.spotify.com/search/", "https://open.spotify.com/search/%s"]
 let searchengine googlemaps_gm = ["https://map.google.com", "https://www.google.com/maps/search/%s"]
+let searchengine googlemapsdir_gmr = ["https://www.google.fi/maps/dir/60°39'45.8"N+25°33'38.9"E//", "https://www.google.fi/maps/dir/60°39'45.8"N+25°33'38.9"E/%s/"]
+
 
 
 let searchalias g = "google" " Create a shortcut for search engines.
@@ -53,6 +55,7 @@ let searchalias ha = "helkaarticles_ha"
 let searchalias ab = "asiakastietobusiness_ab"
 let searchalias sp = "spotify_sp"
 let searchalias gm = "googlemaps_gm"
+let searchalias gmr = "googlemapsdir_gmr"
 
 " alias ':g' to ':tabnew google'
 command g tabnew google
